# Holdem

./: .gitignore  README.md  pyproject.toml
backend/: .gitignore  README.md  pyproject.toml
backend/src/alphaholdem_solver/: main.py  solver.py
config/: hunl.yaml  kuhn.yaml  kuhn_k_best.yaml  leduc.yaml  leduc_1opp.yaml  leduc_1opp_1update.yaml  leduc_1opp_resnet.yaml  leduc_large_batch.yaml  leduc_mid_lr.yaml  leduc_slow.yaml  range_kuhn.yaml  range_kuhn_0.yaml  range_kuhn_1.yaml  range_leduc.yaml  range_leduc_fast.yaml  range_leduc_super.yaml
frontend/alphaholdem-solver/: README.md  package-lock.json  package.json  vite.config.ts
frontend/alphaholdem-solver/src/: main.ts
frontend/alphaholdem-solver/src/api/: api.ts  axios.ts  status.ts
frontend/alphaholdem-solver/src/assets/: base.css  main.css
frontend/alphaholdem-solver/src/components/: DeepStackActionHistory.vue  DeepStackPolicyTable.vue  LeducActionHistory.vue  LeducPolicyTable.vue  RangeActionHistory.vue  RangePolicyTable.vue  TexasActionHistory.vue  TexasPolicyTable.vue
frontend/alphaholdem-solver/src/router/: index.ts
frontend/alphaholdem-solver/src/stores/: deepstack.ts  range.ts  texas.ts
frontend/alphaholdem-solver/src/views/: DeepStackView.vue  LeducView.vue  RangeView.vue  StudyView.vue
src/alphaholdem/: train.py  train_aof.py  train_connect4.py  train_hunl.py  train_hunl_deprecated.py  train_leduc.py
src/alphaholdem/arena/: arena.py  hunl_arena.py  kuhn_arena.py  leduc_arena.py  texas_arena.py
src/alphaholdem/arena/envs/: limit_leduc_holdem_env.py  no_limit_texas_holdem_env.py
src/alphaholdem/callback/: __init__.py  aof_self_play_callback.py  connect4_self_play_callback.py  hunl_self_play_callback.py  kuhn_k_best_callback.py  kuhn_self_play_callback.py  leduc_play_with_best_callback.py  leduc_self_play_callback.py  naive_self_play_callback.py  range_kuhn_self_play_callback.py  range_leduc_self_play_callback.py  self_play_callback.py
src/alphaholdem/config/: config.py  train_config.py
src/alphaholdem/deprecated/: aof_conv_model.py  connect4_mask_conv_model.py  connect4_self_play_callback.py  evaluate_aof.py  evaluate_connect4.py  evaluate_hunl.py  game.py  hunl_conv_model_action_8.py  hunl_play_with_tf_callback.py  hunl_self_play_callback_deprecated.py  train_hunl_with_tf.py
src/alphaholdem/model/: __init__.py  fully_connected_model.py  hunl_conv_model.py  hunl_resnet_model.py  hunl_supervise_model.py  hunl_supervise_one_hot.py  hunl_supervise_range_model.py  hunl_supervise_resnet.py  hunl_supervise_small_model.py  kuhn_model.py  range_hunl_conv_model.py  range_kuhn_model.py  range_leduc_model.py
src/alphaholdem/poker/: __init__.py  aof.py  aof_env.py  kuhn_poker.py  kuhn_poker_env.py  limit_leduc_holdem.py  limit_leduc_holdem_env.py  no_limit_leduc_holdem.py  no_limit_leduc_holdem_env.py  no_limit_texas_holdem.py  no_limit_texas_holdem_env.py  poker_game.py  poker_game_env.py  range_kuhn_poker.py  range_kuhn_poker_env.py  range_limit_leduc_holdem.py  range_limit_leduc_holdem_env.py  range_poker_game.py  range_poker_game_env.py
src/alphaholdem/policy/: __init__.py  heuristic_base.py  random_heuristic.py  random_range_heuristic.py
src/alphaholdem/server/: __init__.py  client.py  console_client.py  room.py  server.py
src/alphaholdem/solver/: deepstack_dataset.py  main.py  range_solver.py  solver.py
src/alphaholdem/supervise/: train.py  train_one_hot.py  train_one_hot_v1.py  train_small.py  train_v1.py
src/alphaholdem/tensorflow/: agent_base.py  comparehands.py  envfeature.py  evaluate.py  model.py  predictor.py
src/alphaholdem/utils/: config.py  counter.py  logger.py  train_config.py  window.py
strategy/: bug.txt  iter3000.txt  iter8.txt  kuhn.txt  kuhn_best.txt  kuhn_nash.txt  kuhn_nash_.txt  kuhn_random.txt  leduc.txt  leduc_player0.txt  leduc_player1.txt  leduc_ppo.txt  leduc_ppo_iter45.txt  new.txt  openstack.txt  terminal_leduc.txt
supervise/: .gitignore  export.py  poker_dataset.py  range_train.py  save_model.py  train.py
tests/poker/: test_game.py  test_hand.py  test_hunl_arena.py  test_judger.py  test_kuhn_arena.py  test_kuhn_policy.py  test_leduc_arena.py  test_leduc_policy.py  test_policy.py  test_range_kuhn.py  test_range_leduc.py  test_supervise.py  test_texas_policy.py
(+44 files in other folders)
