[project]
name = "AlphaHoldem"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Euxcet", email = "zcc.qwer@gmail.com"},
]
dependencies = [
    "torch>=2.2.2",
    "ray[rllib]==2.7.0",
    "setuptools>=69.5.0",
    "pettingzoo[butterfly,classic]==1.24.0",
    "SuperSuit==3.9.0",
    "wandb>=0.16.6",
    "sb3-contrib>=2.3.0",
    "stable-baselines3>=2.3.1",
    "onnx>=1.16.0",
    "onnxruntime>=1.17.3",
    "tensorflow>=2.15.1",
    "omegaconf>=2.3.0",
    "pytest>=8.2.2",
    "lightning>=2.4.0",
    "fastapi>=0.112.1",
    "uvicorn>=0.30.6",
]
requires-python = ">=3.11, <3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.scripts]
train = {call = "alphaholdem.train:main"}
server = {call = "alphaholdem.server:start_server"}
client = {call = "alphaholdem.server.console_client:main"}
supervise = {call = "alphaholdem.supervise.train:train"}
one_hot = {call = "alphaholdem.supervise.train_one_hot:train"}
one_hot_v1 = {call = "alphaholdem.supervise.train_one_hot_v1:train"}
small = {call = "alphaholdem.supervise.train_small:train"}
web = {call = "alphaholdem.solver.main:main"}
fast = {call = "alphaholdem.supervise.train_fast:train"}